# inventario-lec

./: Cargo.toml  Dioxus.toml  README.md  pixi.toml  prek.toml
assets/: main.css
src/: main.rs
